# spaces

./: .gitignore  README.md  ROADMAP.md  compose.yml
backend/: Cargo.toml  README.md
backend/migrations/: 20251110192636_create_spaces_table.sql  20251110192642_create_files_table.sql  20251111131003_change_timestamp_to_tz.sql  20251112093457_make_checksum_required.sql  20251112095352_make_stored_filename_unique.sql  20251112160006_remove_new_filename.sql  20251113204341_storage_sizes_to_bigint.sql
backend/src/: errors.rs  files.rs  main.rs  spaces.rs
web/: README.md  app.config.ts  package.json
web/src/: app.tsx  entry-server.tsx
web/src/components/: FileUploadDialog.tsx  Footer.tsx  GithubIcon.tsx  SpaceCard.tsx  SpaceDialog.tsx  Table.tsx
web/src/lib/: helpers.ts
web/src/routes/: [...404].tsx  index.tsx
web/src/routes/spaces/: [id].tsx
