[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "ws", "macros", "multipart", "tracing"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "macros", "formatting", "parsing", "serde-human-readable"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "fmt", "ansi"] }
uuid = { version = "1.18.1", features = ["v4"] }
